force-app/main/default/objects/eDealer_Config__mdt/eDealer_Config__mdt.object-meta.xml
<CustomObject>
    <label>EDealer Config</label>
    <pluralLabel>EDealer Configs</pluralLabel>
</CustomObject>