force-app/main/default/objects/eDealer_Config__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Look UP Limit</fullName>
                <default>true</default>
                <label>Look UP Limit</label>
            </value>
            <value>
                <fullName>Report Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>